--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
             android:id="@+id/rl_avatar"
             android:layout_width="match_parent"
             android:layout_height="192dp"
-            android:background="@color/colorAccent">
+            android:background="@drawable/bg_theme_gradient">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_avatar"
@@ -108,7 +108,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="历史订单"
+                android:text="我的预约"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_marginStart="32dp"/>
