--- a/app/src/main/res/layout/activity_map_search.xml
+++ b/app/src/main/res/layout/activity_map_search.xml
@@ -29,8 +29,9 @@
     </android.support.constraint.ConstraintLayout>
 
     <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
         <LinearLayout
             android:layout_width="match_parent"
