--- a/app/src/main/res/layout/activity_user_lock.xml
+++ b/app/src/main/res/layout/activity_user_lock.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/slight_gray"
-    tools:context="com.qhiehome.ihome.activity.UserInfoActivity">
+    tools:context="com.qhiehome.ihome.activity.UserLockActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:id="@+id/tb_user_lock"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@drawable/bg_theme_gradient"
             android:minHeight="?attr/actionBarSize"
             android:theme="?attr/actionBarTheme"/>
 
