--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,22 +27,22 @@
         <RelativeLayout
             android:id="@+id/rl_avatar"
             android:layout_width="match_parent"
-            android:layout_height="192dp"
+            android:layout_height="240dp"
             android:background="@drawable/bg_theme_gradient">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_avatar"
-                android:layout_width="96dp"
-                android:layout_height="96dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:src="@drawable/ic_avatar_default"
                 app:civ_border_width="2dp"
                 app:civ_border_color="@color/white"
-                android:layout_centerInParent="true"
-                android:visibility="invisible"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="32dp"
                 />
 
             <TextView
-                android:id="@+id/tv_user_balance"
+                android:id="@+id/tv_user_account"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -50,8 +50,44 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
+                android:layout_marginTop="8dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_label_balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/tv_user_account"
+                android:text="余额(元)"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
                 android:layout_marginTop="12dp"
-                android:visibility="invisible"
+                />
+
+            <TextView
+                android:id="@+id/tv_user_balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/tv_label_balance"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:layout_marginTop="4dp"
+                />
+
+            <TextView
+                android:id="@+id/tv_add_balance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="充值"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:padding="16dp"
                 />
 
             <Button
@@ -62,7 +98,6 @@
                 android:text="请登录"
                 android:textColor="@color/white"
                 android:textSize="18sp"
-                android:visibility="visible"
                 android:background="@drawable/bg_btn_login"
                 />
 
@@ -136,25 +171,6 @@
 
         <LinearLayout
             android:layout_below="@id/ll_my_publish"
-            android:id="@+id/ll_my_wallet"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:background="@drawable/selector_item">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="充值"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_marginStart="32dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_below="@id/ll_my_wallet"
             android:id="@+id/ll_setting"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -165,27 +181,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="设置"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:layout_marginStart="32dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_below="@id/ll_setting"
-            android:id="@+id/ll_quit"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:background="@drawable/selector_item"
-            android:layout_marginTop="48dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="退出"
+                android:text="系统设置"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:layout_marginStart="32dp"/>
