--- a/app/src/main/res/layout/item_rv_lock.xml
+++ b/app/src/main/res/layout/item_rv_lock.xml
@@ -1,73 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="4dp"
-    android:layout_marginTop="16dp"
-    android:layout_marginStart="16dp"
-    android:layout_marginEnd="16dp"
     >
 
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:background="@drawable/selector_item">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/tv_user_lock"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/img_lock"
-            />
-
-        <TextView
-            android:id="@+id/tv_lock_name"
-            tools:text="CrAM_095D28"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/tv_user_lock"
-            android:layout_alignParentTop="true"
-            android:textSize="18sp"
-            android:layout_marginStart="12dp"/>
-
-        <TextView
-            android:id="@+id/tv_rental_status"
-            tools:text="已租用"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+        <android.support.v7.widget.CardView
+            android:id="@+id/cv_lock"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="4dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
-            android:textSize="16sp"
-            />
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/selector_item">
 
-        <Button
-            android:id="@+id/bt_modify_pwd"
-            android:text="修改密码"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_rental_status"
-            android:layout_alignEnd="@id/tv_rental_status"
-            />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="16dp">
 
-        <TextView
-            android:id="@+id/tv_lock_estate_name"
-            tools:text="今典花园"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="-1"
-            android:layout_alignBottom="@id/tv_user_lock"
-            android:layout_alignStart="@id/tv_lock_name"
-            android:layout_toStartOf="@id/bt_modify_pwd"
-            android:textSize="14sp"
-            />
+                <TextView
+                    android:id="@+id/tv_lock_name"
+                    tools:text="CrAM_095D28"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="8dp"/>
 
-    </RelativeLayout>
+                <TextView
+                    android:id="@+id/tv_rental_status"
+                    tools:text="已租用"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="16dp"
+                    android:textSize="16sp"
+                    />
 
-</android.support.v7.widget.CardView>
+                <Button
+                    android:id="@+id/bt_modify_pwd"
+                    android:text="修改密码"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_rental_status"
+                    android:layout_alignEnd="@id/tv_rental_status"
+                    />
+
+                <TextView
+                    android:id="@+id/tv_lock_estate_name"
+                    tools:text="今典花园"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:ellipsize="marquee"
+                    android:marqueeRepeatLimit="-1"
+                    android:layout_below="@id/tv_lock_name"
+                    android:layout_alignStart="@id/tv_lock_name"
+                    android:layout_toStartOf="@id/bt_modify_pwd"
+                    android:layout_marginTop="8dp"
+                    android:textSize="14sp"
+                    />
+
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+
+    </FrameLayout>
+
+    <ImageView
+        android:id="@+id/tv_user_lock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/img_lock"
+        app:layout_anchor="@id/cv_lock"
+        app:layout_anchorGravity="start|top"
+        android:layout_gravity="start"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        />
+
+</android.support.design.widget.CoordinatorLayout>
