--- a/app/src/main/res/layout/item_rv_publish_parking.xml
+++ b/app/src/main/res/layout/item_rv_publish_parking.xml
@@ -3,71 +3,52 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/selector_item"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp">
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp">
 
     <TextView
         android:id="@+id/tv_parking_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:text="车位号：232421231"
+        android:text="1"
         android:textColor="@color/black"
-        android:layout_marginTop="8dp"
+        android:layout_centerVertical="true"
         android:layout_marginStart="16dp"
         />
 
     <TextView
         android:id="@+id/tv_parking_period"
-        android:layout_below="@id/tv_parking_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="预约时段：12:00 ~ 13:00"
+        android:textSize="20sp"
+        android:text="12:00 - 13:00"
         android:textColor="@color/colorAccent"
-        android:layout_alignStart="@id/tv_parking_id"
-        android:layout_marginTop="16dp"
-        />
-
-    <TextView
-        android:id="@+id/label_republish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="重复发布"
-        android:textColor="@color/gray"
-        android:layout_alignStart="@id/tv_parking_period"
-        android:layout_below="@id/tv_parking_period"
-        android:layout_marginTop="16dp"
-        />
-
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/sc_republish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/label_republish"
-        android:layout_alignBaseline="@id/label_republish"
+        android:layout_toEndOf="@id/tv_parking_id"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         />
 
     <TextView
         android:id="@+id/tv_date_selected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/gray"
-        android:layout_toEndOf="@id/sc_republish"
-        android:layout_alignBaseline="@id/sc_republish"
-        android:layout_marginStart="16dp"
+        android:text="仅一次"
+        android:textSize="16sp"
+        android:textColor="@color/dark_gray"
+        android:layout_below="@id/tv_parking_period"
+        android:layout_alignStart="@id/tv_parking_period"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         />
 
-    <ImageView
-        android:id="@+id/iv_callback_publish"
+    <android.support.v7.widget.SwitchCompat
+        android:id="@+id/sc_republish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@android:drawable/ic_menu_delete"
         android:layout_alignParentEnd="true"
-        android:padding="12dp"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="4dp"
+        android:layout_marginEnd="16dp"
         />
 
 </RelativeLayout>
