--- a/app/src/main/res/layout/layout_top_park_fragment.xml
+++ b/app/src/main/res/layout/layout_top_park_fragment.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="@drawable/bg_theme_gradient"
     android:padding="8dp">
@@ -9,17 +9,19 @@
         android:id="@+id/iv_open_drawer"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:src="@mipmap/ic_launcher_logo"
+        android:src="@drawable/ic_personal_center"
         android:layout_gravity="center_vertical"
+        android:layout_marginStart="20dp"
         />
     <RelativeLayout
         android:id="@+id/rl_input_location"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="20dp"
         android:layout_width="0dp"
         android:layout_weight="1.5"
         android:layout_height="match_parent"
         android:background="@drawable/bg_ll_input_position"
         android:layout_gravity="center_vertical"
+        android:layout_marginEnd="20dp"
         android:padding="2dp">
 
         <ImageView
@@ -28,19 +30,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:src="@android:drawable/ic_menu_search"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/ic_search"
             />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="请输入停车地址"
-            android:textColorHint="@color/gray"
+            android:textColorHint="@color/hint_text"
             android:textSize="14sp"
-            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="10dp"
             />
 
     </RelativeLayout>
+
 
     <TextView
         android:id="@+id/tv_current_city"
@@ -50,7 +57,6 @@
         android:textColor="@color/white"
         android:textSize="14sp"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="8dp"
         />
 
     <ImageView
@@ -58,7 +64,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/spinner_arrow"/>
+        android:padding="8dp"
+        android:layout_marginEnd="12dp"
+        android:src="@drawable/img_arrow"/>
 
 
 </LinearLayout>
