--- a/app/src/main/res/drawable/round_button_white.xml
+++ b/app/src/main/res/drawable/round_button_white.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 填充的颜色 -->
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/light_blue" />
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
-    <corners android:radius="360dip" />
+    <corners android:radius="20dp" />
 
     <!-- padding：Button里面的文字与Button边界的间隔 -->
     <padding
@@ -15,4 +15,6 @@
         android:right="10dp"
         android:bottom="10dp"
         />
+
+    <size android:height="40dp" />
 </shape>
