--- a/app/src/main/res/layout/custom_map_marker.xml
+++ b/app/src/main/res/layout/custom_map_marker.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
@@ -7,15 +7,10 @@
 
     <ImageView
         android:id="@+id/iv_marker"
-        android:layout_width="40dp"
-        android:layout_height="50dp"
-        android:background="@drawable/ic_marker_numbers"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:layout_constraintHorizontal_bias="1.0">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/img_redmark"
+        >
     </ImageView>
 
     <TextView
@@ -24,15 +19,11 @@
         android:layout_height="wrap_content"
         android:text="12"
         android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:layout_centerVertical="true"
+        android:textSize="14sp"
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="26dp"
         android:layout_centerHorizontal="true"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.39999998"
-        app:layout_constraintHorizontal_bias="0.6" />
+         />
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
