--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">@color/theme_center_color</color>
     <color name="colorPrimaryDark">@color/theme_end_color</color>
     <color name="colorAccent">@color/theme_start_color</color>
+
     <color name="gray">#666666</color>
     <color name="white">#FFF</color>
     <color name="black">#000</color>
@@ -10,7 +11,6 @@
     <color name="slight_gray">#f2f0f0</color>
     <color name="light_blue">#2e8abb</color><!-- 浅蓝色 -->
     <color name="dark_blue">#3A5FCD</color>
-    <color name="light_green">#43AF5C</color>
     <color name="purple">#69415D</color>
     <color name="purple_start_color">#6178f2</color>
     <color name="purple_end_color">#925eff</color>
@@ -19,10 +19,19 @@
     <color name="pale_green">#66CD00</color>
     <color name="shallow_green">#C1FFC1</color>
     <color name="card">#fff</color>
-
-    <color name="theme_start_color">#4D97D5</color>
     <color name="theme_center_color">#7482DC</color>
-    <color name="theme_end_color">#9A6DE3</color>
 
-    <color name="light_red">#FE5F62</color>
+
+    <color name="theme_start_color">#4c98d5</color>
+    <color name="theme_end_color">#9b6de3</color>
+    <color name="light_red">#fd5a5e</color>
+    <color name="light_green">#0fc88b</color>
+    <color name="press_red">#ca484b</color>
+    <color name="press_blue">#3d7aaa</color>
+    <color name="disable_gray">#fd5a5e</color>
+    <color name="major_text">#333333</color>
+    <color name="minor_text">#8e8e93</color>
+    <color name="hint_text">#999999</color>
+    
+    
 </resources>
