--- a/app/src/main/res/drawable/round_button_white.xml
+++ b/app/src/main/res/drawable/round_button_white.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <!-- 填充的颜色 -->
-    <solid android:color="@color/light_blue" />
+    <solid android:color="@color/white" />
     <!-- 设置按钮的四个角为弧形 -->
     <!-- android:radius 弧形的半径 -->
     <corners android:radius="20dp" />
@@ -16,5 +16,4 @@
         android:bottom="10dp"
         />
 
-    <size android:height="40dp" />
 </shape>
