--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity"
-    android:background="@color/colorPrimary">
+    android:background="@drawable/bg_theme_gradient">
 
     <TextView
         android:id="@+id/tv_phone"
