--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -186,8 +186,9 @@
             android:layout_marginTop="40dp"
             android:layout_centerHorizontal="true"
             android:layout_width="260dp"
-            android:layout_height="wrap_content"
-            android:textSize="22sp"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:textSize="16sp"
             android:textColor="@color/white"
             android:background="@drawable/round_button_green"/>
 
