--- a/app/src/main/res/layout/item_rv_publish_parking.xml
+++ b/app/src/main/res/layout/item_rv_publish_parking.xml
@@ -1,54 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/selector_item"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:orientation="horizontal">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp">
+
+        <TextView
+            android:id="@+id/tv_parking_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="1"
+            android:textColor="@color/black"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="16dp"
+            />
+
+        <TextView
+            android:id="@+id/tv_parking_period"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="12:00 - 13:00"
+            android:textColor="@color/colorAccent"
+            android:layout_toEndOf="@id/tv_parking_id"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            />
+
+        <TextView
+            android:id="@+id/tv_date_selected"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="仅一次"
+            android:textSize="16sp"
+            android:textColor="@color/dark_gray"
+            android:layout_below="@id/tv_parking_period"
+            android:layout_alignStart="@id/tv_parking_period"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            />
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/sc_republish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="16dp"
+            />
+
+    </RelativeLayout>
 
     <TextView
-        android:id="@+id/tv_parking_id"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:text="1"
-        android:textColor="@color/black"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="16dp"
-        />
-
-    <TextView
-        android:id="@+id/tv_parking_period"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/tv_item_delete"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:background="@color/light_red"
+        android:gravity="center"
+        android:text="删除"
+        android:textColor="@color/white"
         android:textSize="20sp"
-        android:text="12:00 - 13:00"
-        android:textColor="@color/colorAccent"
-        android:layout_toEndOf="@id/tv_parking_id"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         />
 
-    <TextView
-        android:id="@+id/tv_date_selected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="仅一次"
-        android:textSize="16sp"
-        android:textColor="@color/dark_gray"
-        android:layout_below="@id/tv_parking_period"
-        android:layout_alignStart="@id/tv_parking_period"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        />
-
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/sc_republish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="16dp"
-        />
-
-</RelativeLayout>
+</LinearLayout>
