--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/iv_avatar"
                 android:layout_width="98dp"
                 android:layout_height="98dp"
-                android:src="@drawable/img_portrait"
+                android:background="@drawable/selector_bg_avatar"
                 app:civ_border_width="2dp"
                 app:civ_border_color="@color/white"
                 android:layout_centerHorizontal="true"
