--- a/app/src/main/res/layout/item_rv_publish_parking.xml
+++ b/app/src/main/res/layout/item_rv_publish_parking.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/selector_item"
@@ -17,9 +18,11 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:text="1"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
+            android:textStyle="bold"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
+            android:background="@drawable/round_button_blue"
             />
 
         <TextView
@@ -54,17 +57,18 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="16dp"
+            android:clickable="false"
             />
 
     </RelativeLayout>
 
     <TextView
         android:id="@+id/tv_item_delete"
-        android:layout_width="100dp"
+        android:layout_width="120dp"
         android:layout_height="match_parent"
         android:background="@color/light_red"
         android:gravity="center"
-        android:text="删除"
+        android:text="取消"
         android:textColor="@color/white"
         android:textSize="20sp"
         />
