--- a/app/src/main/res/layout/layout_top_park_fragment.xml
+++ b/app/src/main/res/layout/layout_top_park_fragment.xml
@@ -66,7 +66,7 @@
         android:layout_gravity="center_vertical"
         android:padding="8dp"
         android:layout_marginEnd="12dp"
-        android:src="@drawable/img_arrow"/>
+        android:src="@drawable/img_down_arrow"/>
 
 
 </LinearLayout>
