--- a/app/src/main/res/layout/activity_map_search.xml
+++ b/app/src/main/res/layout/activity_map_search.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:focusableInTouchMode="true">
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="fill_parent"
         android:layout_height="70dp"
@@ -14,8 +15,8 @@
 
         <com.arlib.floatingsearchview.FloatingSearchView
             android:id="@+id/floating_search_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginLeft="8dp"
@@ -23,10 +24,16 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"></com.arlib.floatingsearchview.FloatingSearchView>
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"></com.arlib.floatingsearchview.FloatingSearchView>
 
 
     </android.support.constraint.ConstraintLayout>
+
+    <!--<include layout="@layout/layout_top_search"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?attr/actionBarSize"/>-->
 
     <ScrollView
         android:layout_width="match_parent"
