--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -22,29 +22,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:background="@color/light_gray">
+        android:background="@color/bg_activity">
 
         <RelativeLayout
             android:id="@+id/layout_title_add"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="42dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="13dp"
                 android:text="请选择充值金额"
-                android:padding="8dp"
-                android:textSize="18sp"/>
+                android:textSize="16sp"
+                android:textColor="@color/subtitle"/>
 
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/layout_detail_add"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="45dp"
             android:layout_below="@id/layout_title_add"
             android:background="@color/white">
 
@@ -52,55 +52,57 @@
                 android:id="@+id/tv_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="充值金额："
-                android:textSize="18sp"
-                android:padding="8dp"
+                android:text="充值金额:"
+                android:textSize="16sp"
+                android:textColor="@color/major_text"
                 android:layout_centerVertical="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="15dp"
                 />
 
             <Button
                 android:id="@+id/btn_add_balance_1"
-                android:layout_width="65dp"
-                android:layout_height="40dp"
-                android:background="@drawable/round_button_green"
+                android:layout_width="55dp"
+                android:layout_height="30dp"
+                android:background="@drawable/pay_button_selected"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/tv_add"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="10元"/>
+                android:layout_marginStart="10dp"
+                android:text="10元"
+                android:textSize="12.5sp"/>
 
             <Button
                 android:id="@+id/btn_add_balance_2"
-                android:layout_width="65dp"
-                android:layout_height="40dp"
-                android:background="@drawable/round_button_green"
+                android:layout_width="55dp"
+                android:layout_height="30dp"
+                android:background="@drawable/pay_button"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/btn_add_balance_1"
-                android:layout_marginStart="4dp"
-                android:text="30元"/>
+                android:layout_marginStart="10dp"
+                android:text="30元"
+                android:textSize="12.5sp"/>
 
             <Button
                 android:id="@+id/btn_add_balance_3"
-                android:layout_width="65dp"
-                android:layout_height="40dp"
-                android:background="@drawable/round_button_green"
+                android:layout_width="55dp"
+                android:layout_height="30dp"
+                android:background="@drawable/pay_button"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/btn_add_balance_2"
-                android:layout_marginStart="4dp"
-                android:text="50元"/>
+                android:layout_marginStart="10dp"
+                android:text="50元"
+                android:textSize="12.5sp"/>
 
             <Button
                 android:id="@+id/btn_add_balance_4"
-                android:layout_width="65dp"
-                android:layout_height="40dp"
-                android:background="@drawable/round_button_green"
+                android:layout_width="55dp"
+                android:layout_height="30dp"
+                android:background="@drawable/pay_button"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/btn_add_balance_3"
-                android:layout_marginStart="4dp"
-                android:text="100元"/>
+                android:layout_marginStart="10dp"
+                android:text="100元"
+                android:textSize="12.5sp"/>
 
 
         </RelativeLayout>
@@ -155,7 +157,7 @@
         <RelativeLayout
             android:id="@+id/layout_title_way"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="42dp"
             android:layout_below="@id/layout_detail_pay">
 
             <TextView
@@ -163,10 +165,10 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="8dp"
-                android:padding="8dp"
+                android:layout_marginStart="13dp"
                 android:text="请选择支付方式"
-                android:textSize="18sp"/>
+                android:textSize="16sp"
+                android:textColor="@color/subtitle"/>
 
         </RelativeLayout>
 
@@ -183,14 +185,15 @@
         <Button
             android:id="@+id/btn_pay"
             android:layout_below="@+id/rv_pay"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"
-            android:layout_width="260dp"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:gravity="center"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             android:textSize="16sp"
             android:textColor="@color/white"
-            android:background="@drawable/round_button_green"/>
+            android:background="@drawable/round_long_button_blue"/>
 
 
 
