--- a/app/src/main/res/layout/item_rv_me.xml
+++ b/app/src/main/res/layout/item_rv_me.xml
@@ -8,19 +8,30 @@
         android:id="@+id/tv_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginStart="32dp"
+        android:textSize="16sp"
+        android:textColor="@color/major_text"
+        android:layout_marginStart="20dp"
         android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/tv_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:textSize="16sp"
-        android:layout_marginEnd="16dp"
+        android:textSize="12sp"
+        android:textColor="@color/minor_text"
+        android:layout_toLeftOf="@+id/setting_right_arrow"
+        android:layout_marginEnd="10dp"
         android:visibility="gone"
         />
+
+    <ImageView
+        android:id="@+id/setting_right_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/img_right_arrow"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="20dp"/>
 
 </RelativeLayout>
