--- a/app/src/main/res/layout/item_rv_setting.xml
+++ b/app/src/main/res/layout/item_rv_setting.xml
@@ -10,7 +10,8 @@
         android:id="@+id/tv_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginLeft="32dp"/>
+        android:textSize="16sp"
+        android:layout_marginLeft="20dp"
+        android:textColor="@color/major_text"/>
 
 </LinearLayout>
