--- a/app/src/main/res/layout/layout_toolbar_centertitle.xml
+++ b/app/src/main/res/layout/layout_toolbar_centertitle.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_center"
@@ -11,7 +11,9 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/bg_theme_gradient"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme">
+        android:theme="?attr/actionBarTheme"
+        android:navigationIcon="@drawable/ic_toolbar_navigation"
+        app:navigationIcon="@drawable/ic_toolbar_navigation">
 
     </android.support.v7.widget.Toolbar>
 
